@@ -2,7 +2,6 @@ package uk.gov.hmcts.reform.divorce.casemaintenanceservice.functionaltest;
 
 import com.github.tomakehurst.wiremock.matching.EqualToPattern;
 import com.github.tomakehurst.wiremock.matching.StringValuePattern;
-import com.google.common.collect.ImmutableMap;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -395,7 +394,7 @@ public class RetrievePetitionITest extends MockSupport {
         final String message = getUserDetails();
 
         final DraftList draftList = new DraftList(Arrays.asList(
-            createDraft("1", ImmutableMap.of(DivorceSessionProperties.PREVIOUS_CASE_ID, "1"),
+            createDraft("1", Map.of(DivorceSessionProperties.PREVIOUS_CASE_ID, "1"),
                 TEST_DRAFT_DOC_TYPE_DIVORCE_FORMAT)),
             null);
 
@@ -416,7 +415,7 @@ public class RetrievePetitionITest extends MockSupport {
             .andExpect(status().isOk())
             .andExpect(content().json(ObjectMapperTestUtil.convertObjectToJsonString(CaseDetails
                 .builder()
-                .data(ImmutableMap.of(DivorceSessionProperties.PREVIOUS_CASE_ID, "1"))
+                .data(Map.of(DivorceSessionProperties.PREVIOUS_CASE_ID, "1"))
                 .build())));
     }
 
@@ -445,7 +444,7 @@ public class RetrievePetitionITest extends MockSupport {
         return CaseDetails.builder()
             .id(id)
             .state(state)
-            .data(ImmutableMap.of(D8_PETITIONER_EMAIL, TEST_USER_EMAIL))
+            .data(Map.of(D8_PETITIONER_EMAIL, TEST_USER_EMAIL))
             .build();
     }
 
